--- a/old.html
+++ b/old.html
@@ -29,7 +29,7 @@
 </div>
 </div>
 <div id="layout-content" class="group">
-<p id="timestamp">Sample code and output automatically executed against nspec version 0.9.51 on 09/22/2011 at 09:20PM</p>
+<p id="timestamp">Sample code and output automatically executed against nspec version 0.9.58 on 01/25/2012 at 12:14PM CST</p>
 </div>
 <p><a name="helloworld"></a></p>
 <div class="zone zone-sub-page-title">
@@ -398,7 +398,7 @@ class describe_expected_exception : nspec
         it["should throw null-ref"] =
             expect&lt;NullReferenceException&gt;(() =&gt; nullString.Trim());
     }
-    string nullString;
+    string nullString = null;
 }</pre>
 <pre id="describe_expected_exception_output" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe expected exception
   given a null string
