that didn't work, how about now...

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
 
 
-    <link href="NSpec/Modules/Heikura.SyntaxHighlighter/Styles/shCore.css" rel="stylesheet" type="text/css" />
+    <link href="Modules/Heikura.SyntaxHighlighter/Styles/shCore.css" rel="stylesheet" type="text/css" />
 
 
 
-    <link href="NSpec/Themes/Contoso/Styles/shThemeRDark.css" rel="stylesheet" type="text/css" />
+    <link href="Themes/Contoso/Styles/shThemeRDark.css" rel="stylesheet" type="text/css" />
 
 
 
-    <link href="NSpec/Themes/Contoso/Styles/Site.css" rel="stylesheet" type="text/css" />
+    <link href="Themes/Contoso/Styles/Site.css" rel="stylesheet" type="text/css" />
 
 
 
-    <link href="NSpec/Media/Default/favicon/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="Media/Default/favicon/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
 
 
@@ -49,23 +49,23 @@
 
 
 
-    <script src="NSpec/Modules/Heikura.SyntaxHighlighter/scripts/shCore.js" type="text/javascript"></script>
+    <script src="Modules/Heikura.SyntaxHighlighter/scripts/shCore.js" type="text/javascript"></script>
 
 
 
-    <script src="NSpec/Modules/Heikura.SyntaxHighlighter/scripts/shAutoloader.js" type="text/javascript"></script>
+    <script src="Modules/Heikura.SyntaxHighlighter/scripts/shAutoloader.js" type="text/javascript"></script>
 
 
 
-    <script src="NSpec/Modules/Heikura.SyntaxHighlighter/scripts/autoloader.js" type="text/javascript"></script>
+    <script src="Modules/Heikura.SyntaxHighlighter/scripts/autoloader.js" type="text/javascript"></script>
 
 
 
-    <script src="NSpec/Modules/Orchard.jQuery/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="Modules/Orchard.jQuery/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 
 
 
-    <script src="NSpec/Core/Shapes/scripts/html5.js" type="text/javascript"></script>
+    <script src="Core/Shapes/scripts/html5.js" type="text/javascript"></script>
 
 
 
