moved js, css files into a flatter folder structure, still having problems with themeing

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
 
 
-    <link href="Modules/Heikura.SyntaxHighlighter/Styles/shCore.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/shCore.css" rel="stylesheet" type="text/css" />
 
 
 
-    <link href="Themes/Contoso/Styles/shThemeRDark.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/shThemeRDark.css" rel="stylesheet" type="text/css" />
 
 
 
-    <link href="Themes/Contoso/Styles/Site.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/Site.css" rel="stylesheet" type="text/css" />
 
 
 
@@ -49,23 +49,23 @@
 
 
 
-    <script src="Modules/Heikura.SyntaxHighlighter/scripts/shCore.js" type="text/javascript"></script>
+    <script src="javascripts/shCore.js" type="text/javascript"></script>
 
 
 
-    <script src="Modules/Heikura.SyntaxHighlighter/scripts/shAutoloader.js" type="text/javascript"></script>
+    <script src="javascripts/shAutoloader.js" type="text/javascript"></script>
 
 
 
-    <script src="Modules/Heikura.SyntaxHighlighter/scripts/autoloader.js" type="text/javascript"></script>
+    <script src="javascripts/autoloader.js" type="text/javascript"></script>
 
 
 
-    <script src="Modules/Orchard.jQuery/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 
 
 
-    <script src="Core/Shapes/scripts/html5.js" type="text/javascript"></script>
+    <script src="javascripts/html5.js" type="text/javascript"></script>
 
 
 
