--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
 
-    <img src="themes/contoso/content/images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left" />
+    <img src="content/images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left" />
 
 
 
