--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header id="layout-header" class="group">
     <div id="header">
         <div class="zone zone-header"><div style="margin-bottom: 0px">
-    <img src="themes/contoso/content/images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left">
+    <img src="images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left">
     <h1 id="branding" style="padding-top: 35px;">
         NSpec - BDD style testing in .Net
     </h1>
