--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400,700" rel="stylesheet" type="text/css">
 <script src="javascripts/shCore.js" type="text/javascript"></script><script src="javascripts/shAutoloader.js" type="text/javascript"></script><script src="javascripts/autoloader.js" type="text/javascript"></script><script src="javascripts/jquery-1.4.2.min.js" type="text/javascript">
-</script><script src="javascripts/html5.js" type="text/javascript"></script><script>(function(d){d.className="dyn"+d.className.substring(6,d.className.length);})(document.documentElement);</script><a href="http://github.com/mattflo/nspec"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1000" src="https://d3nwyuy0nl342s.cloudfront.net/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
+</script><script src="javascripts/html5.js" type="text/javascript"></script><script>(function(d){d.className="dyn"+d.className.substring(6,d.className.length);})(document.documentElement);</script>
+<a href="http://github.com/mattflo/nspec"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1000" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
 
 <div class="tripel-123" id="layout-wrapper">
@@ -22,11 +23,6 @@
         NSpec - BDD style testing in .Net
     </h1>
 </div>
-<!--
-<div class="user-display">
-        <span class="user-actions"><a href="/Users/Account/LogOn?ReturnUrl=%2F">Sign In</a></span>
-</div>
--->
 </div>
     </div>
 </header><div id="layout-navigation" class="group">
