added starting point for continuous testing page

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
 </header><div id="layout-navigation" class="group">
     <div class="zone zone-navigation"><nav><ul class="menu menu-main">
-<li class="current">    <a href="/">Home</a>
+<li class="current">    <a href="/NSpec/">Home</a>
 </li>
-<li>    <a href="/continuoustesting">Continuous Testing</a>
+<li>    <a href="/NSpec/continuoustesting.html">Continuous Testing</a>
 </li>
 <li>    <a href="https://github.com/mattflo/NSpec/issues">Feedback</a>
 </li>
