using includes as opposed to posts folder

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@ my first spec
     </pre>
   </div>
 </div>
-{% for post in site.posts %}
-  {{ post.content }}
-{% endfor %}
 
+{% include specifications.html %}
+{% include befores.html %}
