added summary to the end of the website

--- a/index.html
+++ b/index.html
@@ -91,4 +91,11 @@ my first spec
 </div>
 
 {% include specifications.html %}
-{% include befores.html %}
+{% include before.html %}
+{% include contexts.html %}
+{% include pending.html %}
+{% include helpers.html %}
+{% include act.html %}
+{% include class_level.html %}
+{% include inheritance.html %}
+{% include expected_exception.html %}
