working through fixing internal links

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@ layout: default
       </p>
       <div style="float: left;">
         <ul>
-          <li><a href="/#helloworld">Getting Started</a></li>
-          <li><a href="/#specifications">Specifications</a></li>
-          <li><a href="/#befores">Befores</a></li>
+          <li><a href="#helloworld">Getting Started</a></li>
+          <li><a href="#specifications">Specifications</a></li>
+          <li><a href="#befores">Befores</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
-          <li><a href="/#contexts">Contexts</a></li>
-          <li><a href="/#pendings">Pendings</a></li>
-          <li><a href="/#helpers">Helpers</a></li>
+          <li><a href="#contexts">Contexts</a></li>
+          <li><a href="#pendings">Pendings</a></li>
+          <li><a href="#helpers">Helpers</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
-          <li><a href="/#act">Act</a></li>
-          <li><a href="/#classlevel">Class Level</a></li>
-          <li><a href="/#inheritance">Inheritance</a></li>
+          <li><a href="#act">Act</a></li>
+          <li><a href="#classlevel">Class Level</a></li>
+          <li><a href="#inheritance">Inheritance</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
-          <li><a href="/#exceptions">Exceptions</a></li>
-          <li><a href="/#summary">Summary</a></li>
+          <li><a href="#exceptions">Exceptions</a></li>
+          <li><a href="#summary">Summary</a></li>
         </ul>
       </div>
     </div>
