updated anchor tags

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ layout: default
         <ul>
           <li><a href="#helloworld">Getting Started</a></li>
           <li><a href="#specifications">Specifications</a></li>
-          <li><a href="#befores">Befores</a></li>
+          <li><a href="#before">Befores</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
           <li><a href="#contexts">Contexts</a></li>
-          <li><a href="#pendings">Pendings</a></li>
+          <li><a href="#pending">Pendings</a></li>
           <li><a href="#helpers">Helpers</a></li>
         </ul>
       </div>
@@ -31,7 +31,7 @@ layout: default
       </div>
       <div style="float: left;">
         <ul>
-          <li><a href="#exceptions">Exceptions</a></li>
+          <li><a href="#exception">Exceptions</a></li>
           <li><a href="#summary">Summary</a></li>
         </ul>
       </div>
