still fixing anchor tags

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
       <div style="float: left;">
         <ul>
           <li><a href="#act">Act</a></li>
-          <li><a href="#classlevel">Class Level</a></li>
+          <li><a href="#class_level">Class Level</a></li>
           <li><a href="#inheritance">Inheritance</a></li>
         </ul>
       </div>
