updated exception section

--- a/index.html
+++ b/index.html
@@ -98,4 +98,4 @@ my first spec
 {% include act.html %}
 {% include class_level.html %}
 {% include inheritance.html %}
-{% include expected_exception.html %}
+{% include exception.html %}
