--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
   </article>
   <div class="group">
     <p id="timestamp">
-      Sample code and output automatically executed against nspec version 0.9.61 on 04/24/2012 at 10:35PM CST
+      {% include timestamp %}
     </p>
   </div>
   <p><a name="helloworld"></a></p>
