fixed reference to time stamp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
   </article>
   <div class="group">
     <p id="timestamp">
-      {% include timestamp %}
+      {% include timestamp.html %}
     </p>
   </div>
   <p><a name="helloworld"></a></p>
