updated ref to style sheets

--- a/continuoustesting/index.html
+++ b/continuoustesting/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<p><img style="float: left; margin: 5px;" src="/NSpec/images/specwatchr.png" alt="" /></p>
+<p><img style="float: left; margin: 5px;" src="/images/specwatchr.png" alt="" /></p>
 <p style="font-size: 1.2em;">SpecWatchr allows you to employ continuous testing with NSpec.  SpecWatchr automatically runs impacted tests as you develop.  It keeps you from breaking your concentration while you are developing your application.  Ruby 1.9.2 is and the Watchr gem is needed to run SpecWatchr.  Instructions to get SpecWatchr working follow, let's start with a demo first (if you haven't done so already, it's probably a good idea for you to <a href="http://nspec.org">familiarize yourself with NSpec</a> first):</p>
 <div style="padding-left: 300px; padding-top: 10px; padding-bottom: 10px;"><a style="font-size: 1.5em;" href="https://github.com/amirrajan/SpecWatchr" target="_blank">Source on GitHub.</a></div>
 <div style="padding-left: 300px; padding-top: 10px; padding-bottom: 10px;"><a style="font-size: 2em;" href="http://www.screencast.com/t/CPRFMhW2K" target="_blank">Watch the demo video.</a></div>
