--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@ my first spec
 
 1 Examples, 0 Failed, 0 Pending
     </pre>
+    <h2>Debugger Support</h2>
+    <p>
+        DebuggerShim.cs is a class file included with NSpec, you can use that to debug a test using TestDriven.net or Resharper's test runner (we're working on fully integrated support).
+    </p>
+    <p>
+    Definitely try <b><a href="/continoustesting">specwatchr</a></b>.  Specwatchr will automatically run impacted tests for you when you save a file. If you ever need to debug a test simply use this line of code in your test:
+    </p>
+    <pre>
+        System.Diagnostics.Debugger.Launch();
+    </pre>
   </div>
 </div>
 
