spelling error on link....

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ my first spec
         DebuggerShim.cs is a class file included with NSpec, you can use that to debug a test using TestDriven.net or Resharper's test runner (we're working on fully integrated support).
     </p>
     <p>
-    Definitely try <b><a href="/continoustesting">specwatchr</a></b>.  Specwatchr will automatically run impacted tests for you when you save a file. If you ever need to debug a test simply use this line of code in your test:
+    Definitely try <b><a href="/continuoustesting">specwatchr</a></b>.  Specwatchr will automatically run impacted tests for you when you save a file. If you ever need to debug a test simply use this line of code in your test:
     </p>
     <pre>
         System.Diagnostics.Debugger.Launch();
