--- a/continuoustesting/index.html
+++ b/continuoustesting/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <p><img style="float: left; margin: 5px;" src="/images/specwatchr.png" alt="" /></p>
-<p style="font-size: 1.2em;">SpecWatchr allows you to employ continuous testing with NSpec.  SpecWatchr automatically runs impacted tests as you develop.  It keeps you from breaking your concentration while you are developing your application.  Ruby 1.9.2 is and the Watchr gem is needed to run SpecWatchr.  Instructions to get SpecWatchr working follow, let's start with a demo first (if you haven't done so already, it's probably a good idea for you to <a href="http://nspec.org">familiarize yourself with NSpec</a> first):</p>
+<p style="font-size: 1.2em;">SpecWatchr allows you to employ continuous testing with NSpec.  SpecWatchr automatically runs impacted tests as you develop.  It keeps you from breaking your concentration while you are developing your application.  Ruby 1.9.2 is needed to run SpecWatchr.  Instructions to get SpecWatchr working follow, let's start with a demo first (if you haven't done so already, it's probably a good idea for you to <a href="http://nspec.org">familiarize yourself with NSpec</a> first):</p>
 <div style="padding-left: 200px; padding-top: 10px; padding-bottom: 10px;"><a style="font-size: 1.5em;" href="https://github.com/amirrajan/SpecWatchr" target="_blank">Source on GitHub.</a></div>
 <div style="padding-left: 200px; padding-top: 10px; padding-bottom: 10px;">
 <iframe src="http://player.vimeo.com/video/69700264" width="500" height="400" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> <p><a href="http://vimeo.com/69700264">NSpec + SpecWatchr</a> from <a href="http://vimeo.com/user19333001">Amir Rajan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -17,7 +17,6 @@ layout: default
 <p>This tutorial will walk you through installing SpecWatchr (and all it's related bits).</p>
 <ol>
 <li>Install <a href="http://www.ruby-lang.org/en/downloads/" target="_blank">Ruby 1.9.2 for Windows</a>.</li>
-<li>Install the <a href="http://rubygems.org/gems/watchr" target="_blank">watchr ruby gem</a>.</li>
 <li>Install <a href="http://www.growlforwindows.com/gfw/" target="_blank">Growl For Windows</a>.</li>
 <li>This is a really nice Growl Theme that's worth installing: <a href="http://www.softwarebakery.com/frozencow/translucentdark.xml" target="_blank">Translucent Dark</a>.</li>
 <li>Ensure that you have <a href="http://nuget.org/" target="_blank">NuGet</a> installed.</li>
