added sidekick.bat to website

--- a/continuoustesting/index.html
+++ b/continuoustesting/index.html
@@ -60,7 +60,7 @@ class describe_FirstTest : nspec
 <li>Have we mentioned that the Translucent Dark display for Growl is really nice?</li>
 <li>Run "Start Command Prompt with Ruby" (it should have been added to your start menu when you installed Ruby 1.9.2)</li>
 <li>Navigate to the solution directory for the project you created in the above tests (via command prompt).</li>
-<li>Run the following command: <strong>watchr dotnet.watchr.rb</strong></li>
+<li>Run the following command: <strong><del>watchr dotnet.watchr.rb</del> sidekick.bat</strong></li>
 <li>Now that specwatchr is fired up, save describe_FirstTest.cs (specwatchr will execute and should Growl that all tests are passing).</li>
 </ol></div>
 </div>
