--- a/index.html
+++ b/index.html
@@ -4,53 +4,49 @@ layout: default
 
 <div class="zone zone-content">
   <article class="content-item page">
-    <div class="group" style="padding-top: 10px;">
-      <p>
-        NSpec is a <a href="http://blog.daveastels.com/files/BDD_Intro.pdf">BDD</a> framework for .NET of the xSpec (context/specification) flavor. NSpec is intended to be used to drive development through specifying behavior at the unit level. NSpec is heavily inspired by <a href="http://rspec.info/">RSpec</a> and built upon the <a href="http://www.nunit.org/">NUnit</a> assertion library.
-      </p>
+    <p style="font-size: 20px">
+      NSpec is a BDD style testing framework for .NET. NSpec is heavily inspired by <a href="http://rspec.info/">RSpec</a>.
+    </p>
+    <div class="group">
       <div style="float: left;">
         <ul>
           <li><a href="#helloworld">Getting Started</a></li>
+          <li><a href="#why">Why NSpec?</a></li>
           <li><a href="#specifications">Specifications</a></li>
-          <li><a href="#before">Befores</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
+          <li><a href="#before">Befores</a></li>
           <li><a href="#contexts">Contexts</a></li>
           <li><a href="#pending">Pendings</a></li>
-          <li><a href="#helpers">Helpers</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
+          <li><a href="#helpers">Helpers</a></li>
           <li><a href="#act">Act</a></li>
           <li><a href="#class_level">Class Level</a></li>
-          <li><a href="#inheritance">Inheritance</a></li>
         </ul>
       </div>
       <div style="float: left;">
         <ul>
+          <li><a href="#inheritance">Inheritance</a></li>
           <li><a href="#exception">Exceptions</a></li>
           <li><a href="#summary">Summary</a></li>
         </ul>
       </div>
     </div>
   </article>
-  <div class="group">
-    <p id="timestamp">
-      {% include timestamp.html %}
-    </p>
-  </div>
   <p><a name="helloworld"></a></p>
   <div class="zone zone-sub-page-title">
     <h1>Getting Started</h1>
   </div>
   <div id="layout-content" class="group" style="padding-top: 10px;">
-    <h2>Write Your First Spec</h2>
+    <h1 style="font-size: 25px">Write Your First Spec</h1>
     <p>This tutorial will walk you through installing NSpec and running a simple spec.</p>
     <ol>
-      <li>Open Visual Studio 2010.</li>
+      <li>Open Visual Studio.</li>
       <li>Ensure that you have <a href="http://nuget.org/" target="_blank">NuGet</a> installed. (NuGet only works with VS2010. To use NSpec with VS2008, you must <a href="https://github.com/mattflo/NSpec/downloads">download</a> the binaries zip.)</li>
       <li>Create a <strong>.Net 4.0 or .Net 3.5 </strong>class library project.</li>
       <li>Open the Package Manager Console and type the following command:
@@ -62,41 +58,218 @@ layout: default
       </li>
       <li>After installation completes, create a class with the following code:</li>
     </ol>
-    <pre id="my_first_spec_code" data-timestamp="2012-04-24 22:35:40 -0500" class="brush: csharp;">
+    <pre class="brush: csharp;">
 using NSpec;
 
 class my_first_spec : nspec
 {
-    void given_the_world_has_not_come_to_an_end()
+    void before_each() { name = "NSpec"; }
+
+    void it_works()
     {
-        it["Hello World should be Hello World"] = () =&gt; "Hello World".should_be("Hello World");
+        name.should_be("NSpec");
     }
+
+    void describe_nesting()
+    {
+        before = () =&gt; name + " BDD";
+
+        it["works here"] = () =&gt; name.should_be("NSpec BDD");
+
+        it["and here"] = () =&gt; "Hello World".should_be("NSpec BDD");
+    }
+    string name;
 }
     </pre>
-    <h2>Run Your First Spec</h2>
+    <h2 style="font-size: 25px">Run Your First Spec</h2>
     <p>Nuget placed NSpecRunner.exe in your PATH on the Package Manager Console.</p>
     <ol>
       <li>Build the class library.</li>
       <li>Run the following command in the Package Manager Console:</li>
     </ol>
     <pre style="font-size: 1.2em !important;"> NSpecRunner.exe <em>YourClassLibraryName</em>\bin\debug\<em>YourClassLibraryName</em>.dll</pre>
-    <pre id="my_first_spec_output" data-timestamp="2012-04-24 22:35:40 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">
+    <pre style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">
 my first spec
-  given the world has not come to an end
-    Hello World should be Hello World
+  it works
+  describe nesting
+    works here
+    and here
 
-1 Examples, 0 Failed, 0 Pending
+4 Examples, 0 Failed, 0 Pending
     </pre>
-    <h2>Debugger Support</h2>
+    <h2 style="font-size: 25px">Debugger Support</h2>
     <p>
         DebuggerShim.cs is a class file included with NSpec, you can use that to debug a test using TestDriven.net or Resharper's test runner (we're working on fully integrated support).
     </p>
     <p>
     Definitely try <b><a href="/continuoustesting">specwatchr</a></b>.  Specwatchr will automatically run impacted tests for you when you save a file. If you ever need to debug a test simply use this line of code in your test:
     </p>
-    <pre>
-        System.Diagnostics.Debugger.Launch();
+    <pre class="brush: csharp;">
+    [...]
+
+    System.Diagnostics.Debugger.Launch();
+
+    [...]
     </pre>
+    <h2 style="font-size: 25px">Mono Support</h2>
+    <p>
+      <a href="https://github.com/amirrajan/NSpec-Mono-Binaries" style="font-size: 20px">Mono binaries and samples are available here. Simply clone/download this repository.</a>
+    </p>
+  </div>
+  <p><a name="why"></a></p>
+  <div class="zone zone-sub-page-title">
+    <h1>Why NSpec? What NSpec Brings to the Table.</h1>
+  </div>
+  <div id="layout-content" class="group" style="padding-top: 10px;">
+    <h1 style="font-size: 25px">Consistent with other BDD testing frameworks</h1>
+    If you've used any of the following testing frameworks, you'll feel right at home with NSpec:
+    <ul>
+      <li>RSpec</li>
+      <li>Minitest</li>
+      <li>Jasmine</li>
+      <li>Mocha</li>
+    </ul>
+    <h1 style="font-size: 25px">Less Ceremony (save your keystrokes)</h1>
+    <ul>
+      <li>No need for access modifiers on tests.</li>
+      <li>NSpec test can live side by side with test from other testing frameworks (in the same project).</li>
+      <li>No need to attribute test.</li>
+      <li>Easy transition from xUnit, NUnit, and MSTest frameworks.</li>
+    </ul>
+    <h2>NUnit, XUnit, MSTest force you to place attributes and public access modifiers in your test suites:</h2>
+    <pre class="brush: csharp;">
+[TestFixture]
+public class describe_NUnit
+{
+  [Test]
+  public void it_just_works()
+  {
+    "hello".Should().Equal("hello");
+  }
+}
+    </pre>
+    <h2>NSpec uses underscore conventions, making your tests cleaner:</h2>
+    <pre class="brush: csharp;">
+class describe_NSpec : nspec
+{
+  void it_just_works()
+  {
+    "hello".Should().Equal("hello");
+  }
+}
+    </pre>
+    <h1 style="font-size: 25px">Fluid Test Structures</h1>
+    <ul>
+      <li>Elaborating a context can be done at the method level.</li>
+      <li>Reduce the ceremony of inheritance when it isn't needed.</li>
+    </ul>
+    <h2>NUnit, XUnit, MSTest <strong>force</strong> inheritance if you want to build on a context:</h2>
+    <pre class="brush: csharp;">
+[TestFixture]
+public class describe_NUnit
+{
+  [SetUp]
+  public void before_each()
+  {
+    Console.WriteLine("I run before each test.");
+  }
+
+  [Test]
+  public void it_works_here()
+  {
+    "hello".Should().Equal("hello");
+  }
+}
+
+[TestFixture]
+public class category_of_examples : describe_NUnit
+{
+  [SetUp]
+  public void before_each_for_this_context()
+  {
+    Console.WriteLine("I run before each test defined in this context.");
+  }
+
+  [Test]
+  public void it_also_works_here()
+  {
+    "hello".Should().Equal("hello");
+  }
+
+  [Test]
+  public void it_works_here_too()
+  {
+    "hello".Should().Equal("hello");
+  }
+}
+    </pre>
+    <h2>NSpec can do that too (with less code):</h2>
+    <pre class="brush: csharp;">
+class describe_NSpec : nspec
+{
+  void before_each()
+  {
+    Console.WriteLine("I run before each test.");
+  }
+
+  void it_works_here()
+  {
+    "hello".should_be("hello");
+  }
+}
+
+class category_of_examples : nspec
+{
+  void before_each()
+  {
+    Console.WriteLine("I run before each test defined in this context.");
+  }
+
+  void it_also_works_here()
+  {
+    "hello".should_be("hello");
+  }
+
+  void it_works_here_too()
+  {
+    "hello".should_be("hello");
+  }
+}
+    </pre>
+    <h2>but NSpec <strong>also</strong> provides a more concise option:</h2>
+    <pre class="brush: csharp;">
+class describe_NSpec : nspec
+{
+  void before_each()
+  {
+    Console.WriteLine("I run before each test.");
+  }
+
+  void it_works_here()
+  {
+    "hello".Should().Equal("hello");
+  }
+
+  void a_category_of_examples()
+  {
+    before = () =&gt; Console.WriteLine("I run before each test defined in this context.");
+
+    it["also works here"] = () =&gt; "hello".Should().Equal("hello");
+
+    it["works here too"] = () =&gt; "hello".Should().Equal("hello");
+  }
+}
+    </pre>
+  </div>
+  <div class="zone zone-sub-page-title">
+  <h1>Documentation</h1>
+  </div>
+  <div id="layout-content" class="group" style="padding-top: 10px;">
+  <div class="group">
+    <p id="timestamp">
+      {% include timestamp.html %}
+    </p>
+  </div>
   </div>
 </div>
 
