updated first test

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ class my_first_spec : nspec
 
         it["works here"] = () =&gt; name.should_be("NSpec BDD");
 
-        it["and here"] = () =&gt; "Hello World".should_be("NSpec BDD");
+        it["and here"] = () =&gt; name.should_be("NSpec BDD");
     }
     string name;
 }
