added comments to assertion

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ public class describe_NUnit
   [Test]
   public void it_just_works()
   {
-    "hello".Should().Equal("hello");
+    "hello".Should().Equal("hello"); //this is an arbitrary assertion
   }
 }
     </pre>
@@ -159,7 +159,7 @@ class describe_NSpec : nspec
 {
   void it_just_works()
   {
-    "hello".Should().Equal("hello");
+    "hello".Should().Equal("hello"); //this is an arbitrary assertion
   }
 }
     </pre>
