NSpec works with vs 2010 +

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
     <p>This tutorial will walk you through installing NSpec and running a simple spec.</p>
     <ol>
       <li>Open Visual Studio.</li>
-      <li>Ensure that you have <a href="http://nuget.org/" target="_blank">NuGet</a> installed. (NuGet only works with VS2010. To use NSpec with VS2008, you must <a href="https://github.com/mattflo/NSpec/downloads">download</a> the binaries zip.)</li>
+      <li>Ensure that you have <a href="http://nuget.org/" target="_blank">NuGet</a> installed. (NuGet only works with VS2010+. To use NSpec with VS2008, you must <a href="https://github.com/mattflo/NSpec/downloads">download</a> the binaries zip.)</li>
       <li>Create a <strong>.Net 4.0 or .Net 3.5 </strong>class library project.</li>
       <li>Open the Package Manager Console and type the following command:
         <div class="commandWrapper">
@@ -317,7 +317,7 @@ public static class AssertionExtensions
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
 <ul>
-<li>Install via NuGet (VS2010 only)</li>
+<li>Install via NuGet (VS2010+)</li>
 <li>or download zip from github <a href="https://github.com/mattflo/NSpec/downloads">https://github.com/mattflo/NSpec/downloads</a> </li>
 <li>Requires .NET 3.5</li>
 <li>Classes inherit from nspec</li>
