fixed inheritance heirarchy

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ class describe_NSpec : nspec
     }
 }
 
-class category_of_examples : nspec
+class category_of_examples : describe_NSpec
 {
     void before_each()
     {
